--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -12,7 +13,11 @@
     "@types/react-dom": "^17.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook": "^8.1.4",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "swagger-typescript-api": "^8.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -23,7 +28,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
-    "lint:fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix"
+    "lint:fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
+    "api_types": "swagger-typescript-api -p http://localhost:3000/swagger.json -o ./src -n api/generated-api.ts"
   },
   "eslintConfig": {
     "extends": [
