--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
+    "react-hook-form": "^7.1.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
