--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-facebook": "^8.1.4",
     "react-hook-form": "^7.1.1",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "serve": "^11.3.2",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
